# video-sync

./: .gitignore  README.md
extension/: README.md  common.js  local-test.html  main.js  manifest.json  mock-viewer.html  package-lock.json  package.json  panel.html  panel.js  viewer.js
server/: Cargo.toml  Makefile  README.md  api-repl  config.json  docker-compose.yml  go.mod  go.sum  main.go  main.ts  mongodb  redis  run  tsconfig.json
server/src/: deps.ts  main.rs  main.ts
